# GreatTips

./: .gitmodules  InstallationTips.md  Makefile  README.md  pres.html
CMake/: init.cmake
CompileTimeLogger/: monothread.cpp  multithread.cpp
CppFRUG/: Meetup-10.md  Meetup-11.md  Meetup-12.md
GUTs/: README.md  is_leap_year.tests.cpp  reveal.html
GUTs/LastInFirstOut/: List.tests.cpp  RecentlyUsedList.spec.cpp
GUTs/LeapYear/: is_leap_year.hpp
Gradle/: README.md  build.gradle  settings.gradle
Gradle/base/: build.xml
Gradle/core/: build.xml
Gradle/example/: README.md
Gradle/example/jni/: CMakeLists.txt  build.gradle  build.xml
container/: Dockerfile  README.md  entrypoint.sh
cpp/: cpp_core_guidelines.md  definition_of_done.md  git_branch_workflow.md  lint.md  rules.md  span.md
crypto/: README.md  reveal.html
crypto/1-cryptologie/: README.md
crypto/1-logie/: README.md
crypto/2-cryptomonnaie/: README.md
crypto/2-monnaie/: README.md  reveal.html
db/: elastic.md
dia/: ditaa.md
git/: README.md  branch.md  configuration.md  submodule.md
install/: gnu-linux.md  redhat.md  shell.md  ssh.md  tips.md  tools.md
java/: Ant.md  Gradle.md  README.md  cli.md
java/base/: build.xml
java/core/: build.gradle  build.xml
java/jni/: build.gradle  build.xml
log/: README.md  log.md  syslog.md
markdown/: README.md
network/: README.md
python/: README.md
python/news/: compression-png-webp.md  python-2019.md
python/samples/: long_file_names_v1.py  long_file_names_v2.py  long_file_names_v3.py
survey/: README.md
team/: README.md  autonomy.md  bloatware-technical-debt.md  definition_of_done.md
unit-test/: README.md  reveal.html
unit-test/01-intro/: README.md
unit-test/02-studies/: README.md
unit-test/03-theory/: README.md
unit-test/04-practice/: README.md
unit-test/05-specification/: README.md
unit-test/06-unit/: README.md
unit-test/07-decouple/: README.md
unit-test/08-tdd-bdd/: README.md
unit-test/09-coverage/: README.md
unit-test/10-frameworks/: README.md
unit-test/11-cpp/: README.md
unit-test/12-java/: README.md
web/: api.md
(+21 files in other folders)
